@@ -30,7 +30,7 @@ requires:
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=App-PYX2XML
-  homepage: https://github.com/tupinek/App-PYX2XML
+  homepage: https://github.com/michal-josef-spacek/App-PYX2XML
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/App-PYX2XML
+  repository: git://github.com/michal-josef-spacek/App-PYX2XML
 version: '0.03'
