@@ -94,7 +94,7 @@ pod2xml - Script to convert PYX to XML.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/App-PYX2XML>
+L<https://github.com/michal-josef-spacek/App-PYX2XML>
 
 =head1 AUTHOR
 
