@@ -2,6 +2,7 @@
  - Fix to 80 characters on line.
  - Sort attributes.
  - Update Module::Install to 1.19 version.
+ - Update author github username.
 
 0.02 2016-02-20T23:43:25+01:00
  - Add -e option for input encoding.
